--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,30 @@
 # Formato do token: MTIzNDU2Nzg5MDEyMzQ1Njc4OQ.GhIjKl.MnOpQrStUvWxYz
 DISCORD_TOKEN=seu_bot_token_aqui
 
-# Prefixo dos comandos (padrão: !)
-COMMAND_PREFIX=!
+# Prefixo dos comandos (padrão: .)
+COMMAND_PREFIX=.
+
+# =====================================================
+# 🤖 GROQ API (IA para Autoplay Inteligente)
+# =====================================================
+# Obtenha sua chave GRATUITA em: https://console.groq.com
+#
+# A IA analisa a música atual e histórico para gerar queries
+# otimizadas que trazem músicas relacionadas mas diversas
+#
+# Benefícios:
+# - Queries contextuais inteligentes
+# - Evita loops e repetições
+# - Detecta gênero, mood, artistas similares
+# - Funciona sem IA (fallback automático)
+#
+# Rate Limits GRATUITOS:
+# - 30 requests/minuto
+# - 14.400 requests/dia
+# - Mais que suficiente para autoplay!
+#
+# Deixe em branco para usar sistema manual (também funciona bem)
+GROQ_API_KEY=
 
 # Seu ID de usuário do Discord (opcional, mas recomendado)
 # Como obter:
@@ -53,10 +75,45 @@ YOUTUBE_CLIENT_SECRET=seu_client_secret_aqui
 CREDENTIALS_PATH=config/credentials.json
 TOKEN_PATH=config/token.json
 
-# Configurações do Player
+# =====================================================
+# CONFIGURAÇÕES DO PLAYER
+# =====================================================
 MAX_QUEUE_SIZE=100
 DEFAULT_VOLUME=0.5
 TIMEOUT_SECONDS=300
+
+# =====================================================
+# AUTOPLAY - REPRODUÇÃO CONTÍNUA AUTOMÁTICA
+# =====================================================
+# Ativa/desativa autoplay por padrão ao iniciar o bot
+# true = ativo | false = desativado (padrão)
+# Usuários podem alterar com o comando .autoplay on/off
+AUTOPLAY_ENABLED=false
+
+# Quantidade de músicas a adicionar por vez quando a fila está pequena
+# Recomendado: 2-3 músicas para manter o fluxo natural
+# Padrão: 2
+AUTOPLAY_QUEUE_SIZE=2
+
+# Tamanho do histórico (evita repetir músicas da sessão)
+# Quanto maior, menos repetição, mas mais memória usada
+# Padrão: 100 músicas
+AUTOPLAY_HISTORY_SIZE=100
+
+# =====================================================
+# CROSSFADE - TRANSIÇÃO SUAVE ENTRE MÚSICAS
+# =====================================================
+# Ativa/desativa crossfade por padrão (fade in/out entre músicas)
+# true = ativo (transições suaves) | false = desativado
+# Usuários podem alterar com o comando .crossfade on/off
+# Padrão: true
+CROSSFADE_ENABLED=true
+
+# Duração do fade in/out em segundos
+# Quanto maior, mais suave e lenta a transição
+# Recomendado: 5-15 segundos
+# Padrão: 10 segundos
+CROSSFADE_DURATION=10
 
 # Qualidade de Áudio
 AUDIO_FORMAT=bestaudio/best
