docs: adiciona variáveis faltantes no .env.example e torna cache configurável
MELHORIAS NO .env.example:

✅ Adiciona MUSIC_CHANNEL_ID (faltava documentação)
  - Permite restringir comandos a um canal específico
  - Inclui instruções de como obter o ID
  - Opcional (deixar em branco = qualquer canal)

✅ Adiciona VIDEO_CACHE_SIZE (antes hardcoded)
  - Configurável via env var (antes: hardcoded em 100)
  - Controla tamanho do cache LRU de vídeos
  - Documentado com recomendações (100-500)
  - Explicação clara do impacto (memória vs performance)

MUDANÇAS NO CÓDIGO:

📝 config.py
  - Adiciona config.VIDEO_CACHE_SIZE
  - Default: 100 (mantém comportamento atual)

🎵 services/music_service.py
  - Substitui hardcoded 100 por config.VIDEO_CACHE_SIZE
  - Permite ajuste fino do cache via .env

BENEFÍCIOS:
- Documentação completa de todas as variáveis
- Configuração flexível do cache (antes fixo)
- Usuários avançados podem otimizar memória/performance
- Zero impacto em instalações existentes (defaults iguais)

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,16 @@ GROQ_API_KEY=
 # Formato: 123456789012345678
 OWNER_ID=seu_id_discord_aqui
 
+# Canal dedicado para comandos de música (opcional)
+# Se definido, o bot só responderá comandos neste canal específico
+# Deixe em branco para aceitar comandos em qualquer canal
+# Como obter:
+# 1. Ative "Modo Desenvolvedor" no Discord
+# 2. Clique direito no canal desejado
+# 3. Clique em "Copiar ID"
+# Formato: 123456789012345678
+MUSIC_CHANNEL_ID=
+
 # =====================================================
 # YOUTUBE - AUTENTICAÇÃO
 # =====================================================
@@ -127,6 +137,13 @@ LOG_FILE=bot.log
 CACHE_ENABLED=True
 CACHE_DIR=cache
 CACHE_MAX_SIZE_MB=500
+
+# Tamanho do cache LRU de vídeos (quantos vídeos armazenar em memória)
+# Usado para evitar re-extrair informações de vídeos já processados
+# Quanto maior, mais memória usa, mas menos chamadas ao yt-dlp
+# Recomendado: 100-500
+# Padrão: 100
+VIDEO_CACHE_SIZE=100
 
 # Features
 ENABLE_PLAYLISTS=True
