feat: torna CROSSFADE_STEPS configurável via variável de ambiente
Contexto:
- Durante revisão especializada do .env.example, identificamos que o
  crossfade melhorado (Otimização #17) introduziu um valor hardcoded
  (steps = 50) que deveria ser configurável
- Alinha-se com a filosofia do projeto de expor parâmetros críticos
  via variáveis de ambiente para flexibilidade em produção

Mudanças:
1. config.py:
   - Adicionada variável CROSSFADE_STEPS (default: 50)
   - Permite ajustar qualidade do crossfade via ambiente

2. services/music_service.py:
   - Substituído 'steps = 50' por 'config.CROSSFADE_STEPS'
   - Aplicado em fade_out() e fade_in()
   - Mantém compatibilidade com comportamento anterior

3. .env.example:
   - Documentação completa do CROSSFADE_STEPS
   - Presets de qualidade: baixa (20), média (35), alta (50)
   - Explicação do trade-off CPU vs qualidade

Impacto:
- Usuários podem ajustar qualidade do crossfade sem alterar código
- Útil para ambientes com CPU limitada ou requisitos especiais
- Mantém default em 50 (qualidade profissional)

Referência: Fase 4 - Otimização #17 (Crossfade Melhorado)
Relacionado: .env.example expert review (variáveis faltantes)

--- a/.env.example
+++ b/.env.example
@@ -125,6 +125,16 @@ CROSSFADE_ENABLED=true
 # Padrão: 10 segundos
 CROSSFADE_DURATION=10
 
+# Qualidade do crossfade (número de steps para interpolação)
+# Controla a suavidade da transição de volume
+# Mais steps = transição mais suave e natural, mas usa mais CPU
+# Presets recomendados:
+#   - 20 steps = Qualidade baixa (CPU mínima, transições perceptíveis)
+#   - 35 steps = Qualidade média (balanceado)
+#   - 50 steps = Qualidade alta (profissional, imperceptível)
+# Padrão: 50 (qualidade máxima)
+CROSSFADE_STEPS=50
+
 # Qualidade de Áudio
 AUDIO_FORMAT=bestaudio/best
 BITRATE=192
