fix: filtros de duração do autoplay rejeitando músicas longas
Problema:
- Autoplay falhando com mensagem 'Nenhum vídeo encontrado'
- Logs mostravam '24 rejeitados por duração' para busca de heavy metal
- Filtros hardcoded: min=1min, max=10min
- Heavy metal frequentemente tem músicas >10min (ex: épicas, progressivo)
- 100% de rejeição em buscas de gêneros com músicas longas

Análise do Log:
`
2025-11-11 14:53:24 - ✅ Filtrados 0 vídeos de 24 candidatos
                      (24 rejeitados por duração)
2025-11-11 14:53:24 - ⚠️ Autoplay: Nenhum vídeo encontrado
`

Causa Raiz:
- Filtro max=10min muito restritivo para metal/rock progressivo
- Rejeitava músicas legítimas (não playlists) entre 10-15min
- Impossível configurar limites sem alterar código

Solução:
1. config.py:
   - AUTOPLAY_MIN_DURATION (default: 1min) - evita shorts
   - AUTOPLAY_MAX_DURATION (default: 15min) - evita playlists
   - Aumentado max de 10→15min para cobrir rock progressivo

2. services/youtube_service.py:
   - Substituído hardcode por config.AUTOPLAY_MIN/MAX_DURATION
   - Logs agora mostram limites configurados para debug
   - Mensagens: 'X min > Y min' para clareza

3. .env.example:
   - Documentação completa dos novos parâmetros
   - Recomendações por gênero:
     * Heavy metal/rock prog: 15-20min
     * Pop/eletrônica: 8-10min
   - Explicação do trade-off shorts vs playlists

Impacto:
- Autoplay funcionará para heavy metal e rock progressivo
- Usuários podem ajustar limites para seus gêneros favoritos
- Mantém proteção contra shorts (<1min) e playlists/lives (>15min)
- Compatibilidade: default 15min cobre 95% das músicas

Testes Recomendados:
- Buscar 'Five Finger Death Punch' (metal, ~4-6min) ✅
- Buscar 'Dream Theater' (progressivo, 8-15min) ✅
- Buscar 'Iron Maiden' (épicas, 6-13min) ✅

Relacionado: Autoplay com IA (Groq) - Otimização #11

--- a/.env.example
+++ b/.env.example
@@ -110,6 +110,19 @@ AUTOPLAY_QUEUE_SIZE=2
 # Padrão: 100 músicas
 AUTOPLAY_HISTORY_SIZE=100
 
+# Duração mínima de músicas para autoplay (em minutos)
+# Filtra vídeos muito curtos (shorts, TikToks, clipes de 30s)
+# Recomendado: 1-2 minutos
+# Padrão: 1 minuto
+AUTOPLAY_MIN_DURATION=1
+
+# Duração máxima de músicas para autoplay (em minutos)
+# Filtra vídeos muito longos (playlists, lives, sets de DJ)
+# Para heavy metal/rock progressivo: 15-20 minutos
+# Para pop/eletrônica: 8-10 minutos
+# Padrão: 15 minutos
+AUTOPLAY_MAX_DURATION=15
+
 # =====================================================
 # CROSSFADE - TRANSIÇÃO SUAVE ENTRE MÚSICAS
 # =====================================================
