feat: sistema de logs robusto e dedicado para autoplay - Novo AutoplayLogger em core/logger.py com arquivo dedicado logs/autoplay.log - Instrumentacao completa em music_service.py, youtube_service.py e ai_service.py - Logs estruturados: sessao, estrategia, busca API, batch, filtros, IA, fila - Metricas: tempo total, taxas de aprovacao, performance, economia de quota - Documentacao completa em AUTOPLAY_LOGS.md com exemplos e troubleshooting - Configuracao no .env.example com descricao do sistema

--- a/.env.example
+++ b/.env.example
@@ -153,8 +153,26 @@ AUDIO_FORMAT=bestaudio/best
 BITRATE=192
 
 # Logging
+# Nível de log do bot (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+# DEBUG = Máximo detalhamento (recomendado para desenvolvimento)
+# INFO = Informações gerais de operação (recomendado para produção)
+# Padrão: INFO
 LOG_LEVEL=INFO
+
+# Arquivo de log principal do bot
+# Registra todas as operações do bot (músicas, comandos, erros)
+# Padrão: bot.log
 LOG_FILE=bot.log
+
+# NOTA: O autoplay possui log dedicado em logs/autoplay.log
+# Registra automaticamente:
+#   - Sessões de autoplay (vídeo base, estratégia, query gerada)
+#   - Resultado da API do YouTube (quantidade de resultados)
+#   - Batch processing (velocidade, economia de quota)
+#   - Filtros de duração (aprovados/rejeitados por vídeo)
+#   - Validação IA (decisões por vídeo, confiança, razão)
+#   - Vídeos adicionados à fila
+#   - Tempo total e sucesso/falha da sessão
 
 # Cache
 CACHE_ENABLED=True
